objects/Calendars__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Id__c</fullName>
        <inlineHelpText>Enter the Calendar ID from a public Google Calendar: My Calendar &gt; Calendar Settings &gt; Calendar Address &gt; Calendar ID</inlineHelpText>
        <label>Calendar Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>#A32929</fullName>
                </value>
                <value>
                    <fullName>#B1365F</fullName>
                </value>
                <value>
                    <fullName>#7A367A</fullName>
                </value>
                <value>
                    <fullName>#5229A3</fullName>
                </value>
                <value>
                    <fullName>#29527A</fullName>
                </value>
                <value>
                    <fullName>#2952A3</fullName>
                </value>
                <value>
                    <fullName>#1B887A</fullName>
                </value>
                <value>
                    <fullName>#28754E</fullName>
                </value>
                <value>
                    <fullName>#0D7813</fullName>
                </value>
                <value>
                    <fullName>#528800</fullName>
                </value>
                <value>
                    <fullName>#88880E</fullName>
                </value>
                <value>
                    <fullName>#AB8B00</fullName>
                </value>
                <value>
                    <fullName>#BE6D00</fullName>
                </value>
                <value>
                    <fullName>#B1440E</fullName>
                </value>
                <value>
                    <fullName>#865A5A</fullName>
                </value>
                <value>
                    <fullName>#705770</fullName>
                </value>
                <value>
                    <fullName>#4E5D6C</fullName>
                </value>
                <value>
                    <fullName>#5A6986</fullName>
                </value>
                <value>
                    <fullName>#4A716C</fullName>
                </value>
                <value>
                    <fullName>#6E6E41</fullName>
                </value>
                <value>
                    <fullName>#8D6F47</fullName>
                </value>
                <value>
                    <fullName>#853104</fullName>
                </value>
                <value>
                    <fullName>#691426</fullName>
                </value>
                <value>
                    <fullName>#5C1158</fullName>
                </value>
                <value>
                    <fullName>#23164E</fullName>
                </value>
                <value>
                    <fullName>#182C57</fullName>
                </value>
                <value>
                    <fullName>#060D5E</fullName>
                </value>
                <value>
                    <fullName>#125A12</fullName>
                </value>
                <value>
                    <fullName>#2F6213</fullName>
                </value>
                <value>
                    <fullName>#2F6309</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Calendar__c</fullName>
        <formula>HYPERLINK(&quot;https://www.google.com/calendar/embed?src=&quot;&amp; Calendar_Id__c &amp; &quot;&quot;,   &quot;Google Calendar&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <label>Program Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>